@@ -79,13 +79,7 @@ function instrumentationS3 (orig, origArguments, request, AWS, agent, { version,
     const region = httpRequest && httpRequest.region
 
     span.setServiceTarget('s3', resource)
-    const destContext = {
-      // Typically 'destination.service.resource' is calculated from
-      // 'service.target' in Span.end(), but S3 is a special case in the spec.
-      service: {
-        resource
-      }
-    }
+    const destContext = {}
     // '.httpRequest.endpoint' might differ from '.service.endpoint' if
     // the bucket is in a different region.
     const endpoint = httpRequest && httpRequest.endpoint
